cmake_minimum_required(VERSION 2.8)
project( kamikaze )
list(APPEND CMAKE_PREFIX_PATH "/home/sagarm/code/opencv/install-tree/" )
find_package( OpenCV 3.2 REQUIRED )
add_subdirectory( gflags )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( kamikaze main.cc robot.cc arduinoio.cc )
target_link_libraries( kamikaze ${OpenCV_LIBS} -lpthread -lboost_system gflags )
target_compile_features( kamikaze PRIVATE cxx_constexpr cxx_decltype_auto )
find_package( Threads )
